# magical-creatures

./: .gitignore  README.md  manage.py  pyproject.toml
magical_creatures/: asgi.py  settings.py  urls.py  wsgi.py
unicorn/components/: sightings.py
unicorn/templates/unicorn/: sightings.html
www/: views.py
www/templates/www/: index.html
