[tool.poetry]
name = "magical_creatures"
version = "0.1.0"
description = ""
authors = ["Adam Hill <unicorn@adamghill.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.4"
django-unicorn = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
